<resources>
    <string name="app_name">iScan</string>
    <string name="histori_toko">Histori Toko</string>
    <string name="scan">Scan</string>
    <string name="barcode_text">Barcode</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="scanner_toko">Scanner Toko</string>
    <string name="scanner_produk">Scanner Produk</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="rescan">Rescan</string>
    <string name="exit">Exit</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur harum, quidem delectus asperiores quasi inventore. Vero cupiditate, quas eaque suscipit alias delectus quasi quaerat fugit maxime reiciendis! Eum, ad velit.</string>
    <string name="please_wait">Tunggu sebentar....</string>
    <string name="scanning">Scanning....</string>
    <string name="simple_message">Message</string>
    <string name="no_recent_store">Belum ada toko yang dikunjungi</string>
    <string name="empty_barcode_value">xxxx xxxx xxxx</string>
</resources>