<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Iscan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ScannerProdukActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="12dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/barcode_scanner_white_1" />

        <TextView
            style="@style/TitleTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/scanner_produk"
            android:textSize="36sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_white_top_round"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nama_toko"
            style="@style/TitleTextDarkBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="12dp"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            tools:text="Nama Toko" />

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcode_scanner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            app:zxing_scanner_layout="@layout/custom_barcode_layout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="12dp"
            android:text="@string/barcode_text"
            android:textColor="@color/dark_blue"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_barcode_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24dp"
            tools:text="12345 54636 215468" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/dark_blue"
                android:drawableLeft="@drawable/reset_icon"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:viewBindingIgnore="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginTop="49dp"
                android:layout_marginRight="12dp"
                android:backgroundTint="@color/dark_blue"
                android:drawableLeft="@drawable/approve_icon"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:viewBindingIgnore="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</LinearLayout>