<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Iscan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.detail.DetailProdukActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="12dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:src="@drawable/barcode_scanner_white_1" />

            <TextView
                style="@style/TitleTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/detail_produk"
                android:textSize="36sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_white_top_round"
            android:gravity="top"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vp_foto"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/img_height"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:focusableInTouchMode="true" />

                    <com.viewpagerindicator.CirclePageIndicator
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/indicator"
                        android:layout_marginHorizontal="12dp"
                        app:centered="true"
                        app:snap="true"
                        android:layout_marginTop="8dp"
                        app:pageColor="#999999"
                        app:fillColor="@color/colorPrimary"
                        android:padding="10dp"/>


                    <TextView
                        android:id="@+id/tv_harga_produk"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        tools:text="Rp. 175. 000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="19dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/barcode_text"
                        android:textColor="@color/dark_blue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_barcode_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="12dp"
                        android:drawableLeft="@drawable/barcode_black_1"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        tools:text="12345 54636 215468" />


                    <TextView
                        android:id="@+id/tv_nama_produk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/barcode_text"
                        android:textColor="@color/dark_blue"
                        android:textSize="18sp"
                        tools:text="Nama Produk" />

                    <TextView
                        android:id="@+id/tv_detail_produk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:justificationMode="inter_word"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="@string/lorem" />
                </LinearLayout>


            </ScrollView>


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/reset_icon"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/icon_rescan"
        android:text="@string/rescan"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        android:id="@+id/llProgressBar"
        layout="@layout/layout_progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>